# Numerki

./: .gitignore  README.md
Zad1/: sprawozdanie_wzor.tex
Zad1-Wariant02/src/A/: Afunctions.java  Wielomian.java
Zad1-Wariant02/src/sample/: ChoiceWindow.fxml  ChoiceWindow.java  Controller.java  functions.java  linechart.css  sample.fxml
Zad1/src/A/: FUNKCJA4.java  FUNKCJA5.java  Falsi.java  Funkcja1.java  Funkcja2.java  Model.java  Newton.java  Poradnik  Siecznych.java  Trygonometryczna.java  Wariant.java  WariantA.java  Wielomian.java  Wykladnicza.java  dopoprawy  functions.java
Zad1/src/B/: WariantB.java
Zad1/src/sample/: ChoiceWindow.fxml  ChoiceWindow.java  Controller.java  Main.java  linechart.css  sample.fxml
Zad2/: gui.py  gui.ui  main.py  results.csv  sprawozdanie_zad2.tex  wspolczyniki
Zad2/matrix/: 1.txt  2.txt
Zad3/src/zadanie3/: App.java  Controller.java  Czybyszew.java  Function.java  Funkcja1.java  Funkcja2.java  Lagrange.java  Newton.java  Trygonometryczna.java  Wielomian.java  Wykladnicza.java  linechart.css  sample.fxml
zad4/: CMakeLists.txt  Funkcja1.cpp  Funkcja1.h  Funkcja2.cpp  Funkcja2.h  GaussCzebyszew.cpp  GaussCzebyszew.h  Model.h  NewtonCotes.cpp  NewtonCotes.h  Trygonometryczna.cpp  Trygonometryczna.h  Wielomian.cpp  Wielomian.h  Wykladnicza.cpp  Wykladnicza.h  main.cpp
zad5/: main.py
